--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,94 +1,186 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-* {
+/* PROPIEDADES GENERALES */
+*{
     margin: 0;
     padding: 0;
-    font-family: 'Work Sans', sans-serif;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-html, body {
-    width: 100%;
-    height: 100%;
+body{
+    background-color: #fff; 
+    min-height: 100vh;
+    overflow-x: hidden; 
+    background: linear-gradient(0deg, rgba(207,224,255,1) 0%, rgb(225, 224, 235) 100%);
 }
 
-nav {
-    position: fixed;
-    width: 100%;
+header{
+    position: absolute;
     top: 0;
     left: 0;
-    z-index: 10;
+    width: 100%;
+    padding: 30px 80px 30px 50px;
     display: flex;
+    object-fit: cover;
     justify-content: space-between;
+    align-items: center;
+    z-index: 2000;
 }
 
-nav ul {
-    list-style: none;
+header .logo{
+    width: 15vmax;
+    cursor: pointer;
+}
+
+nav ul{
     display: flex;
-    margin-right: 30px;
-    margin-top: 30px;
+    align-items: center;
+    justify-content: center;
 }
 
-nav ul li:not(:last-child) {
-    margin-right: 50px;
+nav ul li{
+    list-style: none;
+    margin-left: 20px;
 }
 
 nav ul li a {
     text-decoration: none;
-    color: black;
+    padding: 6px 15px;
+    border-radius: 20px;
+    color: #110011;
 }
 
-section#slider {
-    width: 100%;
-    height: 100%;
+nav ul li a:hover,
+nav ul li a.active{
+    background: #DDCCDD;
+    color: #110011;
+}
+section{
     position: relative;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
     overflow: hidden;
 }
 
-div#content-images-slider {
+section::before{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 150px;
+    background: linear-gradient(to top, #1C0522, transparent);
+    z-index: 10;
+}
+
+section img{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    object-fit: cover;
+    pointer-events: none;
 }
 
-div.image-slider {
+section #slogan{
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-position: bottom center;
-    background-size: cover;
+    color: #110011;
+    font-size: 7vmax;
+    text-align: center;
+    font-family: 'Rancho', sans-serif;
+    line-height: 0.8em;
+    white-space: nowrap;
+    transform: translateY(-200px);
+    margin-left: 10vw;   
 }
 
-h1#slider-text {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 15em;
-    background: linear-gradient(0deg, rgba(166,166,166,1) 0%, rgba(255,255,255,1) 32%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+section #btn{
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 30px;
+    color: #fff;
+    font-size: 1.2em;
+    font-weight: 500;
+    letter-spacing: 2px;
+    background: #110011;
+    border-radius: 20px; 
+    transform: translateY(20px); 
+    transform: translateX(60px); 
+}
+section #btn:hover{
+    background: #3d003d;
 }
 
-section#content {
-    width: 100%;
-    height: 100%;
-    background-color: #f0f0f0;
+.sec{
+    background: #1c0522;
+    position: relative;
+    padding: 80px;
 }
 
-div.text-slider {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: .9;
+.sec h2{
+    font-size: 3.5vw;
+    color: #fff;
+    margin-bottom: 10px;
+    text-transform: uppercase;
 }
 
+.sec h3{
+    font-size: 2vw;
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+.sec p{
+    font-size: 1.2em;
+    color: #fff;
+}
+
+/* AHORA HAREMOS EL RESPONSIVO */
+@media (max-width: 991px){
+    .sec{
+        padding: 60px;
+    }
+    .sec p{
+        font-size: 1em;
+    }
+    header .menulist{
+        opacity: 0;
+    }
+    nav ul{
+        display: none;
+        opacity: 0;
+        visibility: hidden;
+    }
+    nav.active ul{
+        position: relative;
+        top: 50px;
+        margin-left: -150px;
+        display: flex;
+        opacity: 1;
+        visibility: visible;
+    }    
+    header .menu{
+        position: absolute;
+        right: 40px;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+        background-image:  url('./../images/lista.svg');
+        background-size: 25px;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+    header .menu.active{
+        background-image: url('./../images/close.svg');
+        background-size: 25px;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+}
 /****PIE DE PAGINA***/
 
 .pie-pagina {
