--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,58 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
 
-body {
+body{
     background: #F5F5F5;
 }
 
-header {
+header{
     height: 100px;
 }
 
-.container__header {
+.container__header{
     max-width: 1200px;
     height: 100%;
     margin: auto;
     padding: 40px;
-    padding-top: 20px;
+    padding-top: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.logo img {
+.logo img{
     width: 180px;
 }
 
-.menu nav ul {
+.menu nav ul{
     display: flex;
 }
 
-.menu nav ul li {
+.menu nav ul li{
     list-style: none;
     padding: 0px 20px;
 }
 
-.menu nav ul li a {
+.menu nav ul li a{
     font-size: 16px;
     text-decoration: none;
     color: #000;
     transition: opacity 300ms;
 }
 
-.menu nav ul li a:hover {
+.menu nav ul li a:hover{
     opacity: 0.6;
 }
 
 .btn__header-register,
-.btn__register-cover {
+.btn__register-cover{
     padding: 14px 50px;
     border: none;
     background: #000;
@@ -65,178 +65,28 @@ header {
 
 
 .btn__header-register:hover,
-.btn__register-cover:hover {
+.btn__register-cover:hover{
     background: #69F1A1;
     color: #000;
 }
 
-#icon_menu {
+#icon_menu{
     display: none;
 }
 
+/*PORTADA - COVER*/
 
-@media (max-width: 1024px) {
-
-    .container__header,
-    main {
-        padding: 20px;
-    }
-
-    #icon_menu {
-        display: block;
-        cursor: pointer;
-        font-size: 24px;
-    }
-
-    .header__register {
-        display: none;
-    }
-
-    .menu {
-        height: 0px;
-        position: absolute;
-        right: 20px;
-        top: 70px;
-        overflow: hidden;
-        z-index: 10;
-        box-shadow: 0px 0px 30px -20px rgba(0, 0, 0, 0.5);
-        transition: all 300ms;
-    }
-
-    .menu nav ul {
-        padding: 20px 0px;
-        flex-direction: column;
-        background: #fff;
-    }
-
-    .menu nav ul li {
-        padding: 10px 40px;
-    }
-
-    .mostrar_menu {
-        /*CLASE MANIPULADA POR JS*/
-        height: 235px;
-    }
-
-    .text__information-cover h1 {
-        font-size: 40px;
-    }
-
-    .text__information-cover p {
-        font-size: 16px;
-    }
-
-    .banner__text h2 {
-        font-size: 22px;
-    }
-
-    #icon_heart {
-        left: -60px;
-    }
-
-    .banner__icon-fire {
-        right: -20px;
-    }
-}
-
-@media (max-width: 920px) {
-    .text__information-cover {
-        width: 100%;
-    }
-
-    .media__cover {
-        display: none;
-    }
-
-    .banner {
-        width: 100%;
-        height: auto;
-        flex-wrap: wrap;
-    }
-
-    #icon_fire {
-        display: none;
-    }
-
-    #icon_heart {
-        left: 0;
-    }
-
-    .banner__text {
-        width: 100%;
-        margin-top: -100px;
-    }
-}
-
-/************* EFECTO PARALLAX*************/
-
-main {
-    height: 100vh;
-    overflow-x: hidden;
-    overflow-y: auto;
-    perspective: 2px;
+main{
+    max-width: 1200px;
+    height: calc(100vh + 800px);
     padding: 40px;
-
-}
-
-section {
-    transform-style: preserve-3d;
-    position: relative;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: rgb(14, 2, 41);
-}
-
-section h1 {
-    text-align: center;
-    font-size: 4rem;
-    font-family: sans-serif;
-}
-
-.no-parallax {
-    background-color: whitesmoke;
-    z-index: 999;
-}
-
-.parallax h2 {
-    width: 60%;
-    font-size: 2rem;
-    color: black;
-}
-
-.parallax::after {
-    content: " ";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    transform: translateZ(-1px) scale(1.5);
-    background-size: 100%;
-    z-index: -1;
-}
-
-.bg::after {
-    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url("../media/portadahome.jpg");
-    background-size: cover;
-}
-
-@media screen and (min-width: 768px) {
-    section h1 {
-        font-size: 8rem;
-    }
-
-    .parallax h1 {
-        font-size: 4rem;
-    }
+    margin: auto;
 }
 
 .cover{
     display: flex;
     justify-content: center;
-    margin-top: 40px;
+    margin-top: 60px;
 }
 
 .text__information-cover{
@@ -245,8 +95,6 @@ section h1 {
 
 .text__information-cover h1{
     font-size: 50px;
-    margin-top: 20px;
-
 }
 
 .text__information-cover p{
@@ -281,4 +129,163 @@ section h1 {
 .media__cover video{
     width: 100%;
     margin-top: -40px;
+}
+
+/*BANNER*/
+
+.container__banner{
+    margin-top: 80px;
+}
+
+.banner{
+    height: 250px;
+    display: flex;
+    align-items: center;
+    background: #121214;
+    position: relative;
+}
+
+.banner__icon-heart{
+    width: 35%;
+    height: 100%;
+}
+
+#icon_heart{
+    width: 400px;
+    margin-top: -20px;
+    position: relative;
+    filter: drop-shadow(-40px 0px 30px rgba(0,0,0,0.5));
+}
+
+.banner__text{
+    width: 60%;
+    position: relative;
+    padding: 40px;
+}
+
+.banner__text h2{
+    color: #fff;
+    font-size: 32px;
+    font-weight: 400;
+}
+
+.banner__text a{
+    text-decoration: none;
+    display: block;
+    margin-top: 20px;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    transition: color 300ms;
+}
+
+.banner__text a:hover{
+    color: #69F1A1;
+}
+
+.banner__icon-fire{
+    height: 100%;
+    position: absolute;
+    right: 10px;
+    overflow: hidden;
+}
+
+#icon_fire{
+    width: 300px;
+    position: relative;
+    margin-top: -100px;
+    opacity: 0.6;
+}
+
+
+@media (max-width: 1024px){
+
+    .container__header,
+    main{
+        padding: 20px;
+    }
+
+    #icon_menu{
+        display: block;
+        cursor: pointer;
+        font-size: 24px;
+    }
+
+    .header__register{
+        display: none;
+    }
+
+    .menu{
+        height: 0px;
+        position: absolute;
+        right: 20px;
+        top: 70px;
+        overflow: hidden;
+        z-index: 10;
+        box-shadow: 0px 0px 30px -20px rgba(0,0,0,0.5);
+        transition: all 300ms;
+    }
+
+    .menu nav ul{
+        padding: 20px 0px;
+        flex-direction: column;
+        background: #fff;
+    }
+
+    .menu nav ul li{
+        padding: 10px 40px;
+    }
+
+    .mostrar_menu{ /*CLASE MANIPULADA POR JS*/
+        height: 235px;
+    }
+
+    .text__information-cover h1{
+        font-size: 40px;
+    }
+
+    .text__information-cover p{
+        font-size: 16px;
+    }
+
+    .banner__text h2{
+        font-size: 22px;
+    }
+
+    #icon_heart{
+        left: -60px;
+    }
+
+    .banner__icon-fire{
+        right: -20px;
+    }
+}
+
+@media (max-width: 920px){
+    .text__information-cover{
+        width: 100%;
+    }
+
+    .media__cover{
+        display: none;
+    }
+
+    .banner{
+        width: 100%;
+        height: auto;
+        flex-wrap: wrap;
+    }
+
+    #icon_fire{
+        display: none;
+    }
+
+    #icon_heart{
+        left: 0;
+    }
+
+    .banner__text{
+        width: 100%;
+        margin-top: -100px;
+    }
 }
