--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,297 +1,352 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    text-decoration: none;
 }
 
-body{
-    background: #F5F5F5;
+.container__all{
+    position: relative;
+    right: 0;
+    transition: all 300ms;
 }
 
 header{
+    width: 100%;
     height: 100px;
+    font-family: 'Poppins', sans-serif;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 100;
+
+    transition: all 300ms;
+}
+
+
+.move_content{
+    right: 180px;
 }
 
 .container__header{
     max-width: 1200px;
-    height: 100%;
-    margin: auto;
-    padding: 40px;
-    padding-top: 80px;
+    height: 100%;  
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; 
+    margin: auto;
+    padding: 0px 20px;
+}
+
+header .logo{
+    height: 100%;
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
 .logo img{
-    width: 180px;
+    width: 150px;
 }
 
-.menu nav ul{
+.container__nav{
+    position: relative;
+    height: 100%;
+}
+
+nav{
+    height: 100%;
+}
+
+nav ul{
+    height: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.menu nav ul li{
+nav ul li{
+    margin: 0px 20px;
     list-style: none;
-    padding: 0px 20px;
 }
 
-.menu nav ul li a{
-    font-size: 16px;
-    text-decoration: none;
-    color: #000;
-    transition: opacity 300ms;
+nav ul li a{
+    color: #373737;
+    font-size: 14px;
 }
 
-.menu nav ul li a:hover{
-    opacity: 0.6;
-}
-
-#selected{
-    background: #9a7deb;
-    padding: 10px 40px;
-    border-radius: 50px;
-}
-
-.btn__header-register,
-.btn__register-cover{
-    padding: 14px 50px;
-    border: none;
-    background: #000;
+.select{
+    background: #359EF9;
+    padding: 10px 30px;
     color: white;
-    font-weight: 500;
-    font-size: 16px;
+    border-radius: 20px;
+}
+
+.nav_mod{
+    height: 70px;
+    box-shadow: 1px 1px 10px 0px #00000010;
+    background: white;
+}
+
+.btn__menu{
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
     cursor: pointer;
-    transition: background, color, 300ms;
-}
-
-
-.btn__header-register:hover,
-.btn__register-cover:hover{
-    background: #69F1A1;
-    color: #000;
-}
-
-#icon_menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transition: background 300ms;
     display: none;
 }
 
-/*PORTADA - COVER*/
-
-main{
-    max-width: 1200px;
-    height: calc(100vh + 800px);
-    padding: 40px;
-    margin: auto;
+.btn__menu:hover{
+    background: #f5f5f5;
 }
+
+/*COVER*/
 
 .cover{
-    display: flex;
-    justify-content: center;
-    margin-top: 60px;
-}
-
-.text__information-cover{
-    width: 50%;
-}
-
-.text__information-cover h1{
-    font-size: 50px;
-}
-
-.text__information-cover p{
-    font-size: 18px;
-    margin-top: 40px;
-}
-
-.buttons__cover{
-    display: flex;
-    margin-top: 40px;
-}
-
-.btn__readMore-cover{
-    padding: 14px 40px;
-    border: none;
-    color: black;
-    font-weight: 500;
-    font-size: 16px;
-    cursor: pointer;
-    margin-left: 10px;
-    transition: background 300ms;
-}
-
-.btn__readMore-cover:hover{
-    background: #E8E8E8;
-}
-
-.media__cover{
-    width: 50%;
-}
-
-.media__cover video{
     width: 100%;
-    margin-top: -40px;
+    padding-bottom: 60px;
+    font-family: 'Poppins', sans-serif;
+    margin-top: 100px;
 }
 
-/*BANNER*/
-
-.container__banner{
-    margin-top: 80px;
-}
-
-.banner{
-    height: 250px;
+.container__cover{
+    max-width: 1200px;
+    margin: auto;
+    padding: 20px;
     display: flex;
-    align-items: center;
-    background: #121214;
+    justify-content: space-between;
     position: relative;
+
+    background-image: url(../images/background-cover.svg);
+    background-size: cover;
+    background-position: bottom;
 }
 
-.banner__icon-heart{
-    width: 35%;
-    height: 100%;
+.cover .container__info{
+    max-width: 400px;
+    margin-top: 40px;
+    z-index: 2;
 }
 
-#icon_heart{
-    width: 400px;
-    margin-top: -20px;
-    position: relative;
-    filter: drop-shadow(-40px 0px 30px rgba(0,0,0,0.5));
+.cover h1{
+    max-width: 400px;
+    font-size: 60px;
+    font-weight: 900;
+    color: #373737;
 }
 
-.banner__text{
-    width: 60%;
-    position: relative;
-    padding: 40px;
+.cover h2{
+    font-size: 60px;
+    font-weight: 900;
+    color: #FEBA0B;
+    margin-top: -30px;
 }
 
-.banner__text h2{
-    color: #fff;
-    font-size: 32px;
-    font-weight: 400;
+.cover p{
+    margin-top: 10px;
+    color: #373737;
 }
 
-.banner__text a{
-    text-decoration: none;
-    display: block;
-    margin-top: 20px;
+.cover input[type="button"]{
+    padding: 10px 40px;
+    margin-top: 40px;
+    font-size: 18px;
+    font-weight: 600;
+    border: none;
     color: white;
-    font-size: 16px;
-    font-weight: bold;
-    transition: color 300ms;
+    background: #FEBA0B;
+    border-radius: 20px;
+    box-shadow: 1px 1px 30px -5px #20202049;
+    cursor: pointer;
+    transition: box-shadow 500ms;
 }
 
-.banner__text a:hover{
-    color: #69F1A1;
+.cover input[type="button"]:hover{
+    box-shadow: 1px 1px 30px -5px #20202085;
 }
 
-.banner__icon-fire{
-    height: 100%;
-    position: absolute;
-    right: 10px;
-    overflow: hidden;
-}
 
-#icon_fire{
-    width: 300px;
+.container__vector{
     position: relative;
-    margin-top: -100px;
-    opacity: 0.6;
+}
+
+.container__vector img{
+    position: absolute;
+    bottom: 10px;
+    right: 0px;
+    width: 600px;
+    animation: move_vector 6s ease-in-out infinite;
+    transition: all 300ms;
+}
+
+@keyframes move_vector {
+    0%{
+        transform: translateY(10px);
+    }
+    25%{
+        transform: translateY(-10px);
+    }
+    100%{
+        transform: translateY(10px);
+    }
+}
+
+@media screen and (max-width: 920px){
+    .container__vector img{
+        width: 500px;
+    }
 }
 
 
-@media (max-width: 1024px){
+@media screen and (max-width: 760px){
 
-    .container__header,
-    main{
-        padding: 20px;
+    .container__nav{
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
-    #icon_menu{
-        display: block;
-        cursor: pointer;
-        font-size: 24px;
+    .btn__menu{
+        display: flex;
     }
 
-    .header__register{
-        display: none;
-    }
-
-    .menu{
-        height: 0px;
-        position: absolute;
-        right: 20px;
-        top: 70px;
-        overflow: hidden;
-        z-index: 10;
-        box-shadow: 0px 0px 30px -20px rgba(0,0,0,0.5);
+    nav{
+        height: 100%;
+        background: #F1FAFF;
+        position: fixed;
+        top: 0;
+        right: -180px;
+        padding: 0 40px;
         transition: all 300ms;
     }
 
-    .menu nav ul{
-        padding: 20px 0px;
+    .move_nav{
+        right: 0px;
+    }
+
+    nav ul{
         flex-direction: column;
-        background: #fff;
     }
 
-    .menu nav ul li{
-        padding: 10px 40px;
+    nav ul li{
+        margin: 20px 0px;
     }
 
-    .mostrar_menu{ /*CLASE MANIPULADA POR JS*/
-        height: 235px;
-    }
-
-    .text__information-cover h1{
-        font-size: 40px;
-    }
-
-    .text__information-cover p{
-        font-size: 16px;
-    }
-
-    .banner__text h2{
-        font-size: 22px;
-    }
-
-    #icon_heart{
-        left: -60px;
-    }
-
-    .banner__icon-fire{
-        right: -20px;
+    .container__vector img{
+        transform: scale(0);
+        animation: none;
     }
 }
 
-@media (max-width: 920px){
-    .text__information-cover{
-        width: 100%;
-    }
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
 
-    .media__cover{
-        display: none;
-    }
+:root{
+    --color-esqueleto:#EFF3F5;
+}
 
-    .banner{
-        width: 100%;
-        height: auto;
-        flex-wrap: wrap;
-    }
 
-    #icon_fire{
-        display: none;
-    }
+.container__article{
+    max-width: 1000px;
+    padding: 0px 20px;
+    margin: auto;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
-    #icon_heart{
-        left: 0;
-    }
+.container__article .box__article{
+    width: 200px;
+    height: 250px;
+    background: var(--color-esqueleto);
+    margin: 20px;
+}
 
-    .banner__text{
-        width: 100%;
-        margin-top: -100px;
-    }
+/*AQUI COMIENZA EL FOOTER*/
+
+footer{
+    width: 100%;
+    padding: 50px 0px;
+    font-family: 'Nunito', sans-serif;
+    *background-color: var(--color-esqueleto);
+    background-image: url("../Images/background-footer.svg");
+    background-size: cover;
+
+    /*webkit-mask-image: url("../Images/background-footer.svg");
+    mask-image: url("../Images/background-footer.svg");
+    -webkit-mask-size: cover;
+    mask-size: cover;*/
+}
+
+.container__footer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: auto;
+    padding-top: 100px;
+}
+
+.box__footer{
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+}
+
+.box__footer .logo img{
+    width: 180px;
+}
+
+.box__footer .terms{
+    max-width: 350px;
+    margin-top: 20px;
+    font-weight: 500;
+    color: #7a7a7a;
+    font-size: 18px;
+
+}
+
+.box__footer h2{
+    margin-bottom: 30px;
+    color: #242424;
+    font-weight: 700;
+}
+
+.box__footer a{
+    margin-top: 10px;
+    color: #7a7a7a;
+    font-weight: 600;
+}
+
+.box__footer a:hover{
+    opacity: 0.8;
+}
+
+.box__footer a .fab{
+    font-size: 20px;
+}
+
+.box__copyright{
+    max-width: 1200px;
+    margin: auto;
+    text-align: center;
+    padding: 0px 40px;
+}
+
+.box__copyright p{
+    margin-top: 20px;
+    color: #7a7a7a;
+}
+
+.box__copyright hr{
+    border: none;
+    height: 1px;
+    background-color: #7a7a7a;
 }
