--- a/css/estilos.css
+++ b/css/estilos.css
@@ -271,177 +271,144 @@ nav ul li a{
 
 /******TARJETAS******/
 
-
-.container__background-triangle{
+.container__card{
     max-width: 1200px;
-    height: 600px;
+    padding: 20px;
+    padding-bottom: 40px;
     margin: auto;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.triangle{
-    width: 300px;
-    height: 300px;
-    background: red;
-    position: absolute;
-}
-
-.triangle1{
-    width: 250px;
-    height: 250px;
-    background: linear-gradient(to left, #0ea1e6, #1e67c7);
-    right: 100px;
-    top: 100px;
-    animation: t1 8s ease infinite;
-}
-
-.triangle2{
-    width: 200px;
-    height: 200px;
-    background: linear-gradient(to left, #ee8105, #c7371e);
-    top: 350px;
-    animation: t2 9s ease infinite;
-}
-
-.triangle3{
-    width: 300px;
-    height: 300px;
-    background: linear-gradient(to left, #1b8fc5, #df0f8f);
-    left: 200px;
-    animation: t3 7s ease infinite;
-}
-
-@keyframes t1 {
-    0%{
-        transform: rotate(45deg) translateY(0px);
-    }
-    50%{
-        transform: rotate(45deg) translateY(20px);
-    }
-    100%{
-        transform: rotate(45deg) translateY(0px);
-    }
-}
-
-@keyframes t2 {
-    0%{
-        transform: rotate(65deg) translateY(0px);
-    }
-    50%{
-        transform: rotate(65deg) translateY(20px);
-    }
-    100%{
-        transform: rotate(65deg) translateY(0px);
-    }
-}
-
-@keyframes t3 {
-    0%{
-        transform: rotate(45deg) translateY(0px);
-    }
-    50%{
-        transform: rotate(45deg) translateY(20px);
-    }
-    100%{
-        transform: rotate(45deg) translateY(0px);
-    }
-}
-
-
-.container__cards{
-    width:100%;
-    margin: auto;
+    margin-top: 60px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    justify-content: center
 }
 
 .card{
-    width: 350px;
-    margin: 10px;
-    padding: 20px;
-    box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
-    background: rgba(255, 255, 255, 0.1);
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    border-radius: 15px;
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
+    width: 300px;
+    position: relative;
+    margin: 20px;
+    font-family: 'Poppins', sans-serif;
     transition: all 300ms;
+    border-radius: 20px;
 }
 
 .card:hover{
-    transform: translateY(-10px);
+    box-shadow: 1px 1px 20px -10px #20202049;
 }
 
-.card:hover .cover__card img{
-    transform: scale(1.1);
+.card:hover .info__description{
+    margin-top: 0;
+    border-radius: 0px 0px 20px 20px;
+
 }
 
-.cover__card{
+.card:hover .icon{
+    margin-top: -110px;
+    border-radius: 20px 20px 0px 0px;
+}
+
+.icon{
     width: 100%;
-    height: 180px;
-    border-radius: 14px;
+    height: 220px;
+    background: #EFF3F5;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+    transition: all 400ms cubic-bezier(0.5,0,0,1);
+    border-radius: 20px;
+}
+
+.icon i{
+    font-size: 150px;
+    color: #fff;
+    transition: all 400ms cubic-bezier(0.5,0,0,1);
+}
+
+.info__description{
+    width: 100%;
+    height: 220px;
+    color: #474747;
+    background: #EFF3F5;
+    padding: 20px;
+    margin-top: -220px;
+    transition: all 400ms cubic-bezier(0.5,0,0,1);
+    border-radius: 20px;
+}
+
+.info__description p{
+    font-size: 14px;
+    margin-top: 10px;
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+    box-orient: vertical;
+    -webkit-line-clamp: 5;
+    line-clamp: 5;
     overflow: hidden;
 }
 
-.cover__card img{
-    width: 110%;
-    transition: all 300ms;
-}
-
-.card h2{
-    font-size: 20px;
-    font-weight: 400;
+.info__description input{
     margin-top: 20px;
-    color: #fff;
-}
-
-.card p{
-    margin-top: 20px;
-    font-size: 14px;
-    font-weight: 300;
-    color: #fff;
-    letter-spacing: 0.5px;
-}
-
-.card hr{
-    margin-top: 30px;
-    border: none;
-    height: 0.2px;
-    background: #41414138;
-}
-
-.footer__card{
-    margin-top: 10px;
-    display: flex;
-    color: #fff;
-    justify-content: space-between;
-}
-
-.footer__card h3{
-    font-size: 15px;
+    padding: 10px 40px;
+    background: #2196f3;
+    color: white;
     font-weight: 500;
+    font-size: 14px;
+    cursor: pointer;
+    border: none;
+    border-radius: 20px;
+    box-shadow: 1px 1px 30px -5px #20202049;
+    transition: box-shadow 300ms;
 }
 
-@media screen and (max-width:1200px) {
-    .container__cards{
-        position: relative;
-        top: 0;
-        left: 0;
-        transform: none;
-        margin-top: 100px;
-        padding-bottom: 100px;
-    }
+.info__description input:hover{
+    box-shadow: 1px 1px 30px -5px #20202070;
 }
 
+
+/*COLOR DE LAS CARD*/
+
+.c1:hover .icon{
+    background: #DD4B25;
+}
+
+.c1 .icon i{
+    color: #DD4B25;
+}
+
+.c1:hover .icon i{
+    color: #fff;
+}
+
+
+.c2:hover .icon{
+    background: #146EB0;
+}
+
+.c2 .icon i{
+    color: #146EB0;
+}
+
+.c2:hover .icon i{
+    color: #fff;
+}
+
+
+.c3:hover .icon{
+    background: #E8B600;
+}
+
+.c3 .icon i{
+    color: #E8B600;
+}
+
+.c3:hover .icon i{
+    color: #fff;
+}
 
 
 /*AQUI COMIENZA EL FOOTER*/
