--- a/css/estilos.css
+++ b/css/estilos.css
@@ -292,7 +292,7 @@ nav ul li a{
     transition: all .4s ease-in-out;
     box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.3);
     text-align: center;
-    background: linear-gradient(-135deg, #c850c0, #4158d0);
+    background: linear-gradient(-135deg,  #7b7fee, #a19cee);
 }
 
 .card:hover {
@@ -329,7 +329,7 @@ nav ul li a{
 .card-encabezado:after {
     border-radius: 50%;
     z-index: 20;
-    background-color: yellow;
+    background-color: rgb(164, 210, 218);
     width: 50px;
     height: 50px;
     top: 0;
@@ -342,7 +342,7 @@ nav ul li a{
     bottom: 0;
     left: -10px;
     border-radius: 20px;
-    background-color: rgb(238, 42, 98);
+    background-color: rgb(164, 210, 218);
     transform: rotate(120deg)
 }
 
@@ -390,7 +390,7 @@ nav ul li a{
 }
 
 .card-iconos li a {
-    color: #7813d6;
+    color: #2013d6;
     height: 100px;
     width: 100px;
     border-radius: 50px;
@@ -402,7 +402,7 @@ nav ul li a{
 
 .card-iconos li a:hover {
     transform: scale(1.1);
-    box-shadow: 0 0 5px #7813d6;
+    box-shadow: 0 0 5px #2713d6;
 }
 
 
@@ -463,7 +463,7 @@ nav ul li a{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(90deg, #7579ff, #b224ef);
+    background: linear-gradient(90deg, #c3c4df, #b7b2f0);
 }
 
 .botones:hover {
