--- a/css/servicios.css
+++ b/css/servicios.css
@@ -76,7 +76,7 @@ header {
 
 
 .select{
-    background: #359EF9;
+    background: #033f74;
     padding: 10px 30px;
     color: white;
     border-radius: 20px;
