--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,81 +1,79 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
 }
 
-.container__all{
-    position: relative;
-    right: 0;
-    transition: all 300ms;
+body {
+    background: #F5F5F5;
 }
 
-header{
-    width: 100%;
+header {
     height: 100px;
-    font-family: 'Poppins', sans-serif;
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 100;
-
-    transition: all 300ms;
 }
 
-
-.move_content{
-    right: 180px;
-}
-
-.container__header{
+.container__header {
     max-width: 1200px;
-    height: 100%;  
-    display: flex;
-    justify-content: space-between; 
+    height: 100%;
     margin: auto;
+    padding: 40px;
+    padding-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo img {
+    width: 180px;
+}
+
+.menu nav ul {
+    display: flex;
+}
+
+.menu nav ul li {
+    list-style: none;
     padding: 0px 20px;
 }
 
-header .logo{
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.menu nav ul li a {
+    font-size: 16px;
+    text-decoration: none;
+    color: #000;
+    transition: opacity 300ms;
 }
 
-.logo img{
-    width: 150px;
+.menu nav ul li a:hover {
+    opacity: 0.6;
 }
 
-.container__nav{
-    position: relative;
-    height: 100%;
+.btn__header-register,
+.btn__register-cover {
+    padding: 14px 50px;
+    border: none;
+    background: #000;
+    color: white;
+    font-weight: 500;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background, color, 300ms;
 }
 
-nav{
-    height: 100%;
+
+.btn__header-register:hover,
+.btn__register-cover:hover {
+    background: #69F1A1;
+    color: #000;
 }
 
-nav ul{
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#icon_menu {
+    display: none;
 }
 
-nav ul li{
-    margin: 0px 20px;
-    list-style: none;
-}
-
-nav ul li a{
-    color: #373737;
-    font-size: 14px;
-}
 
 .select{
     background: #033f74;
@@ -83,28 +81,97 @@ nav ul li a{
     color: white;
     border-radius: 20px;
 }
+@media (max-width: 1024px) {
 
-.nav_mod{
-    height: 70px;
-    box-shadow: 1px 1px 10px 0px #00000010;
-    background: white;
+    .container__header,
+    main {
+        padding: 20px;
+    }
+
+    #icon_menu {
+        display: block;
+        cursor: pointer;
+        font-size: 24px;
+    }
+
+    .header__register {
+        display: none;
+    }
+
+    .menu {
+        height: 0px;
+        position: absolute;
+        right: 20px;
+        top: 70px;
+        overflow: hidden;
+        z-index: 10;
+        box-shadow: 0px 0px 30px -20px rgba(0, 0, 0, 0.5);
+        transition: all 300ms;
+    }
+
+    .menu nav ul {
+        padding: 20px 0px;
+        flex-direction: column;
+        background: #fff;
+    }
+
+    .menu nav ul li {
+        padding: 10px 40px;
+    }
+
+    .mostrar_menu {
+        /*CLASE MANIPULADA POR JS*/
+        height: 235px;
+    }
+
+    .text__information-cover h1 {
+        font-size: 40px;
+    }
+
+    .text__information-cover p {
+        font-size: 16px;
+    }
+
+    .banner__text h2 {
+        font-size: 22px;
+    }
+
+    #icon_heart {
+        left: -60px;
+    }
+
+    .banner__icon-fire {
+        right: -20px;
+    }
 }
 
-.btn__menu{
-    width: 50px;
-    height: 50px;
-    font-size: 20px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    transition: background 300ms;
-    display: none;
-}
+@media (max-width: 920px) {
+    .text__information-cover {
+        width: 100%;
+    }
 
-.btn__menu:hover{
-    background: #f5f5f5;
+    .media__cover {
+        display: none;
+    }
+
+    .banner {
+        width: 100%;
+        height: auto;
+        flex-wrap: wrap;
+    }
+
+    #icon_fire {
+        display: none;
+    }
+
+    #icon_heart {
+        left: 0;
+    }
+
+    .banner__text {
+        width: 100%;
+        margin-top: -100px;
+    }
 }
 
 /*COVER*/
@@ -206,6 +273,13 @@ nav ul li a{
 
 
 @media screen and (max-width: 760px){
+    .container__vector img{
+        width: 500px;
+    }
+}
+
+/*
+@media screen and (max-width: 760px){
 
     .container__nav{
         display: flex;
@@ -213,7 +287,7 @@ nav ul li a{
         align-items: center;
     }
 
-    .btn__menu{
+    /*.btn__menu{
         display: flex;
     }
 
@@ -231,7 +305,7 @@ nav ul li a{
         right: 0px;
     }
 
-    nav ul{
+   /* nav ul{
         flex-direction: column;
     }
 
@@ -243,7 +317,7 @@ nav ul li a{
         transform: scale(0);
         animation: none;
     }
-}
+}*/
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
 
@@ -477,14 +551,16 @@ nav ul li a{
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 760px) {
     .contenedor {
         grid-template-columns: 1fr;
+        align-items: center;
+        justify-content: center;
     }
 }
 
 
-@media screen and (max-width: 852px) {
+@media screen and (max-width: 920px) {
     .contenedor {
         gap: 5px;
     }
