--- a/css/estilos.css
+++ b/css/estilos.css
@@ -560,9 +560,12 @@ header {
 }
 
 
-@media screen and (max-width: 920px) {
+@media screen and (max-width: 950px) {
     .contenedor {
+        grid-template-columns: 1fr;
         gap: 5px;
+        align-items: center;
+        justify-content: center;
     }
 }
 
