--- a/css/estilos.css
+++ b/css/estilos.css
@@ -81,7 +81,7 @@ header {
 
 
 .select{
-    background: #033f74;
+    background: #3f7cb1;
     padding: 10px 30px;
     color: white;
     border-radius: 20px;
