--- a/css/estilos.css
+++ b/css/estilos.css
@@ -185,7 +185,7 @@ header {
 main{
     max-width: 1200px;
     height: calc(100vh + 800px);
-    padding: 40px;
+/*    padding: 40px;*/
     margin: auto;
 }
 
